[build-system]
requires = ["setuptools>=68", "wheel"]

[project]
name = "talosdb"
version = "0.1.2"
description = "Lightweight experiment storage library for scientific simulations."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "GrindelfP", email = "grindelf.perlomutrovij@gmail.com" },
]
keywords = ["experiment", "simulation", "storage", "science", "numpy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/GrindelfP/talosdb"
Repository = "https://github.com/GrindelfP/talosdb"
"Bug Tracker" = "https://github.com/GrindelfP/talosdb/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
